<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pushparaj.firebasenotification.Register">
    <include layout="@layout/toolbar_layout" android:id="@+id/toolbar_id"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar_id"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:id="@+id/txtRegister"
                    android:layout_alignLeft="@+id/editEmail"
                    android:layout_alignStart="@+id/editEmail"
                    android:text="@string/create_new_account"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <EditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txtRegister"
                    android:layout_marginTop="30dp"
                    android:hint="@string/display_name"
                    android:id="@+id/editDisplayName" />

                <EditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/editDisplayName"
                    android:layout_marginTop="30dp"
                    android:inputType="text"
                    android:hint="@string/enter_email_id"
                    android:id="@+id/editEmail"/>
                <EditText
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/editEmail"
                    android:layout_marginTop="30dp"
                    android:inputType="textPassword"
                    android:hint="@string/enter_the_password"
                    android:id="@+id/editPass"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/editPass"
                    android:layout_marginTop="30dp"
                    android:text="@string/register"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:textSize="20sp"
                    android:onClick="RegisterClicked"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
