<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pushparaj.firebasenotification.RequestsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:hint="@string/searchNAme"
            android:id="@+id/editSearch"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/search"
            android:id="@+id/searchButt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editSearch"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/showButt"
            android:text="@string/requests"
            android:layout_below="@+id/editSearch"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/searchButt"
                android:id="@+id/recycleView"/>



    </RelativeLayout>


</FrameLayout>
