<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pushparaj.firebasenotification.StartPage">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_to_the_start_page"
        android:textSize="20sp"
        android:id="@+id/lbwelcome"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_below="@+id/lbwelcome"
        android:layout_centerHorizontal="true"
        android:src="@drawable/earth"
        android:layout_marginTop="40dp"/>
    <Button
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/new_user"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:onClick="newUser"
        android:id="@+id/btNewUser"/>
    <Button
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:onClick="existingUser"
        android:textSize="18sp"
        android:text="@string/existing_user"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/btNewUser"
        android:id="@+id/btnExistingUser"/>

</RelativeLayout>
