<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pushparaj.firebasenotification.AllUserProfile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/earth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:id="@+id/circular_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/circular_image"
                android:id="@+id/txt_display_name"
                android:text="@string/default_name"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_below="@+id/txt_display_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text= "@string/default_status"
                android:textSize="18sp"
                android:id="@+id/txt_status"/>
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_status"
                android:layout_marginTop="40dp"
                android:onClick="SendRequest"
                android:id="@+id/send_request"
                android:layout_centerHorizontal="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_status"
                android:layout_centerHorizontal="true"
                android:id="@+id/txt_friends"/>
            <Button
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/decline"
                android:layout_below="@+id/send_request"
                android:layout_marginTop="20dp"
                android:id="@+id/decline_request"
                android:onClick="Decline"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
